# diit-prog-pr6

./: .gitignore  CMakeLists.txt  README.md
include/: config.h  double.h  matrix.h  matrix_1d_array.h  matrix_2d_array.h
src/: main.cpp
src/lib/: double.cpp
tests/: test_double.cpp  test_matrix.cpp  test_matrix_1d_array.cpp  test_matrix_2d_array.cpp
